# rules_nextjs

./: .gitignore  CHANGELOG.md  MODULE.bazel  README.md
docs/: BUILD.bazel  defs.md
examples/minimal-app/: BUILD.bazel  MODULE.bazel  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
examples/minimal-app/src/app/: page.tsx
next/: defs.bzl
next/private/: BUILD.bazel  rewrite_tsconfig.mjs  write_next_config_wrapper.mjs
